# veridical-flow

./: .gitignore  .pylintrc  Makefile  README.md  citation.cff  enhancer-rush.ipynb  enhancer-rush.py  hatch.toml  license.md  paper.md  pyproject.toml  readme.md  references.bib  requirements.txt  setup.py
.github/workflows/: python-package.yml
data/enhancer/: 01_X_train.csv  02_X_test.csv
docs/: CNAME  build_docs.sh  contributing.md  convert.html  github.css  helpers.html  how-vflow-works.html  html.mako  index.html  internals.md  main.html  module.html  module_set.html  perturbation.html  perturbation_set.html  pipeline.html  smart_subkey.html  style_docs.py  subkey.html  troubleshooting.md  utils.html  vflow-internals.html  vfunc.html  vset.html  wave.css
docs/notebooks/: 00_synthetic_classification.html  01_enhancer.html  01_enhancer_rush.html  02_fmri.html  03_computer_vision_dnn.html  04_feat_importance_stability.html
docs/paper/: compile_paper.sh  paper.md
notebooks/: 00_synthetic_classification.ipynb  01_enhancer.ipynb  01_enhancer_rush.ipynb  02_fmri.ipynb  03_computer_vision_dnn.ipynb  04_feat_importance_stability.ipynb  Enhancer.ipynb  async_module.ipynb  caching.ipynb  digits_classification.ipynb  enhancer-rush.ipynb  fmri.ipynb  mlflow.ipynb  readme.md  sklearn_pipeline_ex.ipynb  synthetic_classification.ipynb
notebooks/computational/: 00_mlflow_tracking.ipynb  01_ray_async.ipynb
notebooks/data/enhancer/: 03_y_train.csv  04_y_test.csv
notebooks/data/fmri/: resp_dat.npy
notebooks/experimental/: 01_enhancer_experimental.ipynb  async_module.ipynb  build_Vset.ipynb  caching.ipynb  impute-predict-screen.ipynb  lazy_eval.ipynb  mlflow_logging_hardcoded.ipynb  mlflow_tracking.ipynb  p_check.ipynb
notebooks/ref/: 01_enhancer_rush.ipynb  digits_classification.ipynb
pcs/: __init__.py  main.py  perturbation_set.py  pipeline.py
pcsp/: __init__.py  convert.py  module.py  module_set.py  perturbation.py  perturbation_set.py  pipeline.py  smart_subkey.py
tests/: test_basic.py  test_convert.py  test_dict_combine.py  test_helpers.py  test_pipelines.py  test_three_dict_pipeline.py  test_utils.py
vflow/: __init__.py  __init__.py.bak  convert.py  helpers.py  module.py  module_set.py  pipeline.py  smart_subkey.py  subkey.py  utils.py  vdict.py  vfunc.py  vkey.py  vset.py
vflow-ui/: index.html  main.js  package-lock.json  package.json  styles.css
vflow-ui/js/: script.js
vflow-ui/py/: __init__.py  handler.py  helpers.py  main.py
vflow-ui/templates/: evaluate.html  initialize.html  train.html
